Added "Treasure Here" project and optimized videos

--- a/projects/comdexheist.html
+++ b/projects/comdexheist.html
@@ -32,7 +32,7 @@
         <img src="../media/selfie.png" alt="Liam Armitage">
         <div class="personal-info">
           <h1 data-i18n="header.title">Liam Armitage</h1>
-          <h2 data-i18n="header.subTitle">Technical Artist</h2>
+          <h2 data-i18n="header.subTitle">Game Artist</h2>
           <a href="../media/Liam_Armitage_Resume.pdf" download class="resume-download"><i
               class="fa fa-download"></i><span data-i18n="header.resume">&nbsp; Resume</span></a>
         </div>
