--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Exo+2:wght@600&family=Josefin+Sans:wght@700&family=Klee+One&family=Roboto:wght@300&display=swap"
         rel="stylesheet">
-    <title data-i18n="head.title"></title>
+    <title data-i18n="head.title">Liam Armitage - Technical Artist</title>
     <link rel="icon" type="image/x-icon" href="media/favicon.png">
 </head>
 
