Commented out unnecessary entries, updated SotM and About Me

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Exo+2:wght@600&family=Josefin+Sans:wght@700&family=Klee+One&family=Roboto:wght@300&display=swap"
         rel="stylesheet">
-    <title data-i18n="head.title">Liam Armitage - Technical Artist</title>
+    <title data-i18n="head.title"></title>
     <link rel="icon" type="image/x-icon" href="media/favicon.png">
 </head>
 
@@ -64,48 +64,6 @@
             </section>
             <section class="projects">
 
-                <!-- Treasure Here -->
-                <div class="project-item game-design pixel-art">
-                    <div class="media-wrapper">
-                        <video class="preview-video" autoplay loop muted playsinline>
-                            <source src="media/treasurehere.webm" type="video/webm">
-                        </video>
-                        <h3><a href="projects/treasurehere.html" data-i18n="main.projects.treasureHere.title">
-                            Treasure Here</a></h3>
-                    </div>
-
-                    <div class="project-description-wrapper">
-                        <div class="summary-wrapper">
-                            <h4 data-i18n="main.projects.treasureHere.summaryTitle">Summary</h4>
-                            <p class="summary">
-                                <span data-i18n="main.projects.treasureHere.summaryText">A retro-styled pixel art game,
-                                    designed and developed during the 48-hour GMTK Game Jam. You play as a bad guy
-                                    enticing 'players' to raid your dungeon, selling the loot you get from defeating
-                                    them in the process!</span>
-                            </p>
-                        </div>
-                        <div class="role-wrapper">
-                            <h4 data-i18n="main.projects.treasureHere.roleTitle">Role</h4>
-                            <ul class="role">
-                                <li><span data-i18n="main.projects.treasureHere.roleResponsibility1"></span><span
-                                        class="keyword art" data-i18n="main.projects.treasureHere.artist">Character &
-                                        Background Artist</span></li>
-                                <li><span data-i18n="main.projects.treasureHere.roleResponsibility2">Crafted 15 animated
-                                        character sprites and 5 unique background art assets</span></li>
-                                <li><span data-i18n="main.projects.treasureHere.roleResponsibility3">Collaborated with a
-                                        team of 5, fostering a communicative and collaborative development
-                                        environment</span></li>
-                            </ul>
-                        </div>
-                    </div>
-
-                    <p class="project-link">
-                        <span data-i18n="main.projects.treasureHere.linkIntro">Check out the project:</span><a
-                            href="https://awesomecake.itch.io/treasure-here"><span
-                                data-i18n="main.projects.treasureHere.linkText"> here</span></a>
-                    </p>
-                </div>
-
                 <!-- Flipnote Shader -->
                 <div class="project-item technical-art programming">
                     <div class="media-wrapper">
@@ -150,7 +108,7 @@
 
                     <div class="media-wrapper">
                         <video class="preview-video" autoplay loop muted playsinline>
-                            <source src="media/jolynepreview.webm" type="video/webm">
+                            <source src="media/jolynepreview.mp4" type="video/mp4">
                         </video>
                         <h3><a href="projects/jolynesthread.html" data-i18n="main.projects.jolynesThread.title">Jolyne's
                                 Thread</a></h3>
@@ -199,7 +157,7 @@
 
                     <div class="media-wrapper">
                         <video class="preview-video" autoplay loop muted playsinline>
-                            <source src="media/swordofthemorelpreview.webm" type="video/webm">
+                            <source src="media/swordofthemorelpreview.mp4" type="video/mp4">
                         </video>
                         <h3><a href="projects/swordofthemorel.html"
                                 data-i18n="main.projects.swordOfTheMorel.title">Sword of the Morel</a></h3>
@@ -246,7 +204,49 @@
                     </p>
                 </div>
 
-                <!-- Comdex Heist -->
+                <!-- Treasure Here -->
+                <div class="project-item game-design pixel-art">
+                    <div class="media-wrapper">
+                        <video class="preview-video" autoplay loop muted playsinline>
+                            <source src="media/treasurehere.mp4" type="video/mp4">
+                        </video>
+                        <h3><a href="projects/treasurehere.html" data-i18n="main.projects.treasureHere.title">
+                            Treasure Here</a></h3>
+                    </div>
+
+                    <div class="project-description-wrapper">
+                        <div class="summary-wrapper">
+                            <h4 data-i18n="main.projects.treasureHere.summaryTitle">Summary</h4>
+                            <p class="summary">
+                                <span data-i18n="main.projects.treasureHere.summaryText">A retro-styled pixel art game,
+                                    designed and developed during the 48-hour GMTK Game Jam. You play as a bad guy
+                                    enticing 'players' to raid your dungeon, selling the loot you get from defeating
+                                    them in the process!</span>
+                            </p>
+                        </div>
+                        <div class="role-wrapper">
+                            <h4 data-i18n="main.projects.treasureHere.roleTitle">Role</h4>
+                            <ul class="role">
+                                <li><span data-i18n="main.projects.treasureHere.roleResponsibility1"></span><span
+                                        class="keyword art" data-i18n="main.projects.treasureHere.artist">Character &
+                                        Background Artist</span></li>
+                                <li><span data-i18n="main.projects.treasureHere.roleResponsibility2">Crafted 15 animated
+                                        character sprites and 5 unique background art assets</span></li>
+                                <li><span data-i18n="main.projects.treasureHere.roleResponsibility3">Collaborated with a
+                                        team of 5, fostering a communicative and collaborative development
+                                        environment</span></li>
+                            </ul>
+                        </div>
+                    </div>
+
+                    <p class="project-link">
+                        <span data-i18n="main.projects.treasureHere.linkIntro">Check out the project:</span><a
+                            href="https://awesomecake.itch.io/treasure-here"><span
+                                data-i18n="main.projects.treasureHere.linkText"> here</span></a>
+                    </p>
+                </div>                
+
+                <!-- Comdex Heist 
                 <div class="project-item art technical-art">
 
                     <div class="media-wrapper">
@@ -282,14 +282,14 @@
                             progress:</span><a
                             href="https://snowy-engine-238.notion.site/Comdex-Heist-53450a756f984286b9ec9e4bdfb3829a"><span
                                 data-i18n="main.projects.comdexHeist.linkText"> here</span></a></p>
-                </div>
+                </div>-->
 
                 <!-- Downsized -->
                 <div class="project-item programming art technical-art">
 
                     <div class="media-wrapper">
                         <video class="preview-video" autoplay loop muted playsinline>
-                            <source src="media/downsizedpreview.webm" type="video/webm">
+                            <source src="media/downsizedpreview.mp4" type="video/mp4">
                         </video>
                         <h3 data-i18n="main.projects.downsized.title">Downsized</h3>
                     </div>
@@ -360,7 +360,7 @@
                                 data-i18n="main.projects.scrabble.linkText"> here</span></a></p>
                 </div>
 
-                <!-- Roodig -->
+                <!-- Roodig 
                 <div class="project-item art">
 
                     <div class="media-wrapper">
@@ -396,7 +396,7 @@
                     <p class="project-link"><span data-i18n="main.projects.roodig.linkIntro">Play the game:</span><a
                             href="https://globalgamejam.org/2023/games/roodig-5"
                             data-i18n="main.projects.roodig.linkText"> here</a></p>
-                </div>
+                </div>-->
 
                 <!-- Covid News Scanner
             <div class="project-item programming">
@@ -440,7 +440,7 @@
 
                     <div class="art-media-wrapper">
                         <video autoplay loop muted playsinline>
-                            <source src="media/fleaflee.webm" type="video/webm">
+                            <source src="media/fleaflee.mp4" type="video/mp4">
                         </video>
                         <h3 data-i18n="main.art.flea.title">Flea Flee</h3>
                     </div>
@@ -498,7 +498,7 @@
                         the Cookie Robots in Despicable Me, recreated in Maya for a 3D Asset Production class.</p>
                 </div>
 
-                <div class="solo-art-item">
+                <!--<div class="solo-art-item">
 
                     <div class="art-media-wrapper">
                         <img src="media/argus.png" loading="lazy"
@@ -508,7 +508,7 @@
 
                     <p class="summary" data-i18n="main.art.robotbutler.description">A character from one of the first
                         D&D campaigns I participated in!</p>
-                </div>
+                </div>-->
 
                 <div class="solo-art-item">
 
@@ -522,6 +522,7 @@
                         setting with a shattered washed-up TV.</p>
                 </div>
 
+                <!--
                 <div class="solo-art-item">
 
                     <div class="art-media-wrapper">
@@ -532,7 +533,7 @@
 
                     <p class="summary" data-i18n="main.art.projectdelta.description">The player lineup from said
                         campaign.</p>
-                </div>
+                </div>-->
             </section>
         </main>
     </div>
