--- a/projects/swordofthemorel.html
+++ b/projects/swordofthemorel.html
@@ -162,11 +162,12 @@
                 the novel mechanics and distinctive visual style of the game.
               </p>
 
-              <h2 class="section-title" data-i18n="main.future.title">Future Plans</h2>
+              <h2 class="section-title" data-i18n="main.future.title">Future Development</h2>
               <p class="section-description" data-i18n="main.future.description1">
-                Although current plans are nebulous, the team has expressed interest in further developing the game. We
-                look forward to the potential opportunity to expand upon our initial concept and continue our journey
-                with Sword of the Morel.
+                Sword of the Morel has been granted $10,000 dollars in seed money from the 
+                <a href="https://www.rit.edu/simonecenter/magic-maker-program" target="_blank">RIT Magic Maker Program</a> to
+                further develop the game over the course of the 2023 Fall Semester! I plan to work further on art, as well as
+                VFX and shaders to make the game a visual masterpiece.
               </p>
             </div>
 
