Updated portfolio for Technical Designer role

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                 <img src="media/selfie.png" alt="Liam Armitage">
                 <div class="personal-info">
                     <h1 data-i18n="header.title">Liam Armitage</h1>
-                    <h2 data-i18n="header.subTitle">Technical Artist</h2>
+                    <h2 data-i18n="header.subTitle">Technical Design</h2>
                     <a href="media/Liam_Armitage_Resume.pdf" download class="resume-download"><i
                             class="fa fa-download"></i><span data-i18n="header.resume">&nbsp; Resume</span></a>
                 </div>
@@ -46,8 +46,8 @@
                 <p>
                     <span data-i18n="main.hundredDays.intro">Feel free to check out my in-progress project:</span>
                     <a href="https://snowy-engine-238.notion.site/100-Days-of-Tech-Art-94e362b1607e45029b795429b6d6c4f6"
-                        data-i18n="main.hundredDays.projectName">100 Days of Tech Art</a>,
-                    <span data-i18n="main.hundredDays.description">a live daily journal of my upcoming tech art
+                        data-i18n="main.hundredDays.projectName">100 Days Series</a>,
+                    <span data-i18n="main.hundredDays.description">a live daily journal of my upcoming
                         projects!</span>
                 </p>
             </div>
@@ -58,7 +58,7 @@
                     data-i18n="main.projectFilters.programming">Programming</button>
                 <button onclick="filterProjects('art')" data-i18n="main.projectFilters.art">Art</button>
                 <button onclick="filterProjects('technical-art')" data-i18n="main.projectFilters.technicalArt">Technical
-                    Art</button>
+                    Design</button>
                 <button class="solo-art-button" onclick="window.location.href='#art-title';"
                     data-i18n="main.projectFilters.jumpToArtSamples">Jump to Art Samples</button>
             </section>
@@ -87,7 +87,7 @@
                             <ul class="role">
                                 <li><span data-i18n="main.projects.flipnoteShader.roleResponsibility1">Solo </span><span
                                         class="keyword art"
-                                        data-i18n="main.projects.flipnoteShader.techArtist">Technical Artist</span></li>
+                                        data-i18n="main.projects.flipnoteShader.techArtist">Shader Artist</span></li>
                                 <li><span data-i18n="main.projects.flipnoteShader.roleResponsibility2">Utilized Python
                                         to create volumetric textures and demo visualizations</span></li>
                                 <li><span data-i18n="main.projects.flipnoteShader.roleResponsibility3">Engineered a
@@ -131,9 +131,7 @@
                             <h4 data-i18n="main.projects.jolynesThread.roleTitle">Role</h4>
                             <ul class="role">
                                 <li><span data-i18n="main.projects.jolynesThread.roleResponsibility1">Solo </span><span
-                                        class="keyword art" data-i18n="main.projects.jolynesThread.techArtist">Technical
-                                        Asset
-                                        Artist</span></li>
+                                        class="keyword art" data-i18n="main.projects.jolynesThread.techArtist">Procedural Asset Designer</span></li>
                                 <li><span data-i18n="main.projects.jolynesThread.roleResponsibility2">Designed and
                                         implemented a versatile asset using Blender's Geometry Nodes and Shader
                                         Nodes.</span></li>
