Revert "Updated portfolio for Technical Designer role"
This reverts commit 48a60abaf996ad6a7714954a6625cf22e18c517a.

--- a/aboutme.html
+++ b/aboutme.html
@@ -23,14 +23,14 @@
                 <img src="media/selfie.png" alt="Liam Armitage">
                 <div class="personal-info">
                     <h1 data-i18n="name">Liam Armitage</h1>
-                    <h2 data-i18n="role">Technical Designer</h2>
+                    <h2 data-i18n="role">Technical Artist</h2>
                     <a href="media/Liam_Armitage_Resume.pdf" download class="resume-download"><i class="fa fa-download"></i><span data-i18n="resume">&nbsp; Resume</span></a>
                     <button id="translate" onclick="translateWebsite('aboutme');" data-i18n="translate">Ａ → あ</button>
                 </div>
                 </div>
                 <div class="introduction">
                 <h1 data-i18n="greetings">Salutations!</h1>
-                <p data-i18n="intro">I'm Liam Armitage, a passionate <span class='keyword art'>Technical Designer</span> with a keen focus on system design and player experience optimization. As I approach my graduation from the Rochester Institute of Technology in December 2024 with a Bachelor of Science in <span class='keyword other'>Game Design and Development</span>, I'm eager to apply my cultivated skills and knowledge to craft intuitive and immersive gaming experiences!</p>
+                <p data-i18n="intro">I'm Liam Armitage, a passionate <span class="keyword art">Technical Artist</span> with a keen focus on shader programming, VFX, rigging, and asset optimization. As I approach my graduation from the Rochester Institute of Technology in December 2024 with a Bachelor of Science in <span class="keyword other">Game Design and Development</span>, I'm excited to leverage my accumulated skills and experience to create fantastic looking and performant gaming experiences!</p>
                 <br>
                 <p data-i18n="skills">I'm adept with an array of game engine and modeling tools like <span class="keyword art">Maya</span> and <span class="keyword art">Blender</span>, <span class="keyword art">Unreal Engine</span>, <span class="keyword art">Unity</span>, and more. My programming prowess covers languages such as <span class="keyword programming">C++</span>, <span class="keyword programming">C#</span>, <span class="keyword programming">HLSL</span>, and <span class="keyword programming">Python</span>. Fluent in both <span class="keyword other">English</span> and <span class="keyword other">Japanese</span> (N1 certified), I excel at bridging communication gaps and aiding team collaboration in diverse settings.</p>      
                 <br>
