Updated SotM to MKBGS

--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
                             <source src="media/swordofthemorelpreview.mp4" type="video/mp4">
                         </video>
                         <h3><a href="projects/swordofthemorel.html"
-                                data-i18n="main.projects.swordOfTheMorel.title">Sword of the Morel</a></h3>
+                                data-i18n="main.projects.swordOfTheMorel.title">Mushroom Kid's Big Grass Sword (Sword of the Morel)</a></h3>
                     </div>
 
                     <div class="project-description-wrapper">
@@ -170,9 +170,10 @@
                                 <span data-i18n="main.projects.swordOfTheMorel.summaryIntro">A submission for the
                                 </span><a href="https://itch.io/jam/gmjam2022"
                                     data-i18n="main.projects.swordOfTheMorel.summaryEvent">2022 Game/Music Jam</a><span
-                                    data-i18n="main.projects.swordOfTheMorel.summaryText">, Sword of the Morel is a 2D
-                                    platformer based on the theme of growth featuring a sword that grows the more
-                                    enemies defeated.</span>
+                                    data-i18n="main.projects.swordOfTheMorel.summaryText">, a 2D
+                                    platformer featuring a sword that grows the more
+                                    enemies defeated. The project has been funded <span class="keyword other">$10,000</span> by the RIT Magic Maker Programming
+                                    and is currently being produced into a full game using Godot over the current semester.</span>
                             </p>
                         </div>
                         <div class="role-wrapper">
@@ -180,15 +181,10 @@
                             <ul class="role">
                                 <li><span data-i18n="main.projects.swordOfTheMorel.roleIntro"></span><span
                                         class="keyword art"
-                                        data-i18n="main.projects.swordOfTheMorel.rolePosition">Background and Asset
-                                        Artist</span></li>
-                                <li><span data-i18n="main.projects.swordOfTheMorel.roleResponsibility1">Created numerous
-                                        large-scale pixel art sprites that added aesthetic value and enhanced gameplay
-                                        experience.</span></li>
-                                <li><span data-i18n="main.projects.swordOfTheMorel.roleResponsibility2">Accumulated over
-                                        60 hours in Aseprite mastering the tool and enhancing the game visuals.</span>
+                                        data-i18n="main.projects.swordOfTheMorel.rolePosition">Environment, VFX, and Tech Artist</span></li>
+                                <li><span data-i18n="main.projects.swordOfTheMorel.roleResponsibility1">Currently, I am working on background art, as well as environment shaders and procedural VFX. (Samples on project page)</span>
                                 </li>
-                                <li><span data-i18n="main.projects.swordOfTheMorel.roleResponsibility3">Contributed
+                                <li><span data-i18n="main.projects.swordOfTheMorel.roleResponsibility2">Contributed
                                         significantly to winning the </span><span class="keyword other"
                                         data-i18n="main.projects.swordOfTheMorel.roleAchievement">Best
                                         Visuals</span><span data-i18n="main.projects.swordOfTheMorel.roleEnd"> award in
