--- a/projects/swordofthemorel.html
+++ b/projects/swordofthemorel.html
@@ -49,17 +49,17 @@
 
         <div class="introduction-wrapper">
 
-          <h1 class="project-title" data-i18n="main.introduction.title">Sword of the Morel - A 2022 Game/Music Jam 
-            Project</h1>
+          <h1 class="project-title" data-i18n="main.introduction.title">Mushroom Kid's Big Grass Sword (Formerly 'Sword of the Morel')</h1>
 
           <p class="project-description" data-i18n="main.introduction.description">
             Sword of the Morel is a charming 2D platformer based on the theme of growth. The player stars as a mushroom
             boy, Mica, who embarks on a quest to reclaim his village, using a sword that grows stronger with each
-            defeated enemy. This project won the "Best Visuals" award at the 2022 Game/Music Jam.
+            defeated enemy. This project won the "Best Visuals" award at the 2022 Game/Music Jam, and has since recieved
+            a $10,000 stipend from RIT for further development over the course of the 2023 Fall Semester.
           </p>
 
           <p class="section-description" data-i18n="main.introduction.link">
-            Feel free to get the game from
+            Feel free to get the game jam version from
             <a href="https://fumpledump.itch.io/sword-of-the-morel" target="_blank">itch.io</a>
           </p>
 
@@ -74,13 +74,10 @@
               As a <b>Background and Asset Artist</b>, I had the opportunity to create numerous large-scale pixel art sprites,
               contributing significantly to the game's aesthetic and gameplay experience. Accumulating over 60 hours in
               Aseprite, I was able to enhance the game's visuals and master the use of this pixel art tool.
-            </p>
-
-            <h2 class="section-title" data-i18n="main.assets.title">Creation of Assets</h2>
-            <p class="section-description" data-i18n="main.assets.description1">
-              The visual style of the game was largely dictated by the pixel style and color palette I used. By
-              referencing various types of mushrooms and incorporating a nature-themed aesthetic, I created assets that
-              enhanced the game's charm and atmosphere.
+              <br>
+              <br>
+              Now, as the game has entered a full production phase, I've taken the role of <b>Environment Artist, VFX Artist, and Technical Artist</b>.
+              Aiming to give the game a quaint and homely atmosphere, I'm making a strong splash in the world of shaders for 2D games using Godot's shader and particle engine.
             </p>
 
           </div>
@@ -91,7 +88,7 @@
                 <source src="projectmedia/swordofthemorel/trailer.mp4" type="video/mp4">
               </video>
               <figcaption class="preview-caption" data-i18n="main.trailer.caption">
-                A game trailer produced by <a href="https://johndevelopment.com/">John Haley</a></figcaption>
+                A game trailer for the jam produced by <a href="https://johndevelopment.com/">John Haley</a></figcaption>
             </figure>
           </div>
 
@@ -99,7 +96,7 @@
 
         <div class="visualization-wrapper">
 
-          <h2 class="section-title" data-i18n="main.visualization.title">Samples</h2>
+          <h2 class="section-title" data-i18n="main.visualization.title">Game Jam Samples</h2>
 
           <div class="visualizations">
 
@@ -149,7 +146,7 @@
 
             <h2 class="section-title" data-i18n="main.challenges.title">Challenges and Solutions</h2>
             <p class="section-description" data-i18n="main.challenges.description1">
-              The time constraint of the competition and the resolution differences between the level design and my
+              In the Jam, the time constraint of the competition and the resolution differences between the level design and my
               sprites posed significant challenges. Despite these, we communicated as best as we could and found ways to
               integrate the assets effectively, contributing to a cohesive and visually engaging game.
             </p>
@@ -166,14 +163,43 @@
               <p class="section-description" data-i18n="main.future.description1">
                 Sword of the Morel has been granted $10,000 dollars in seed money from the 
                 <a href="https://www.rit.edu/simonecenter/magic-maker-program" target="_blank">RIT Magic Maker Program</a> to
-                further develop the game over the course of the 2023 Fall Semester! I plan to work further on art, as well as
-                VFX and shaders to make the game a visual masterpiece.
+                further develop the game over the course of the 2023 Fall Semester!
               </p>
             </div>
 
-            <video class="preview-video timelapse" autoplay loop muted controls playsinline>
-              <source src="projectmedia/swordofthemorel/timelapse.mp4" type="video/mp4">
-            </video>
+          </div>
+
+        </div>
+
+        <div class="visualization-wrapper">
+
+          <h2 class="section-title" data-i18n="main.visualization2.title">Current Production Samples</h2>
+
+          <div class="visualizations2">
+
+            <figure class="preview-figure">
+              <img class="preview-image" src="projectmedia/swordofthemorel/conceptart2.png" loading="lazy" alt="Color scripts">
+            </figure>
+
+            <figure class="preview-figure">
+              <img class="preview-image" src="projectmedia/swordofthemorel/conceptart.png" loading="lazy" alt="Concept art value sketches for background art">
+            </figure>
+
+            <figure class="preview-figure">
+              <img class="preview-image" src="projectmedia/swordofthemorel/godrays.gif" loading="lazy" alt="a colored background image with a godray shader and post-processing applied">
+            </figure>
+
+            <figure class="preview-figure">
+              <img class="preview-image" src="projectmedia/swordofthemorel/fire1.gif" loading="lazy" alt="Early testing for the fire shader">
+            </figure>
+
+            <figure class="preview-figure">
+              <img class="preview-image" src="projectmedia/swordofthemorel/fire2.gif" loading="lazy" alt="intermediate progress of the fire shader">
+            </figure>
+
+            <figure class="preview-figure">
+              <img class="preview-image" src="projectmedia/swordofthemorel/fire3.gif" loading="lazy" alt="final version for the fire shader">
+            </figure>
 
           </div>
 
